--- a/cviceni/style.css
+++ b/cviceni/style.css
@@ -14,3 +14,70 @@ html {
   dark: #003322;
   semi-transparent: #40bf9599;
 */
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+/*
+  background image: https://picsum.photos/1200/300
+  primary: #40bf95;
+  dark: #003322;
+  semi-transparent: #40bf9599;
+*/
+h1 {
+  display: block;
+}
+
+header {
+  min-height: 15rem;
+  background-size: cover;
+
+  text-align: center;
+}
+
+body {
+  width: 80%;
+  margin: 0 auto;
+}
+
+main {
+  background-color: #40bf9599;
+  padding: 5rem 0;
+}
+nav li {
+  display: inline-block;
+}
+
+section {
+  background-color: #40bf95;
+  padding: 3rem 2rem;
+  border-bottom: 5px dotted #003322;
+}
+nav a {
+  text-decoration: none;
+  color: black;
+  background-color: #40bf9599;
+}
+nav a:hover {
+  background-color: #40bf95;
+}
+
+header {
+  text-align: center;
+  background-image: url(https://picsum.photos/1200/300);
+  background-size: cover;
+  min-height: 15rem;
+  padding: 5rem 3rem;
+}
+
+h1 {
+  font-size: 5rem;
+  color: aliceblue;
+  margin: 0;
+}
